# iris

./: .gitignore  README.md  pyproject.toml
iris/: cli.py  generator.py
iris/templates/: colors-hypr.conf  colors-kitty.conf  colors-waybar.css  colors-wayle.toml
