[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris-colors"
version = "0.1.0"
description = "semantic color scheme generator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.scripts]
iris = "iris.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["iris"]